syntax = "proto3";
package utility;

option go_package = "github.com/pokt-network/pocket/utility/types";

// TODO: Deprecate this in favor of consensus
message Vote {
  bytes public_key = 1;
  int64 height = 2;
  uint32 round = 3;
  uint32 type = 4;
  bytes block_hash = 5;
}